<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/drawer_bg"
        android:layout_marginTop="@dimen/margin_medium"
        app:behavior_hideable="false"
        app:behavior_peekHeight="64dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:padding="@dimen/margin_medium"
                android:text="Swipe up to add announcement"
                android:textAlignment="center"
                android:layout_width="match_parent" android:layout_height="wrap_content"/>


        <!--<com.github.badoualy.datepicker.DatePickerTimeline-->
        <!--android:id="@+id/expiryDatePicker"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"/>-->
        <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/margin_medium"
                android:layout_width="match_parent" android:layout_height="wrap_content">


            <EditText
                    android:background="@drawable/edit_area_bg"
                    android:padding="@dimen/margin_small"
                    android:id="@+id/announceTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/announce_title_hint"/>


            <EditText
                    android:layout_marginTop="@dimen/margin_medium"
                    android:padding="@dimen/margin_small"
                    android:background="@drawable/edit_area_bg"
                    android:id="@+id/annnounceMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="4"
                    android:hint="@string/announce_message_hint"/>

            <!--<CheckBox-->
            <!--android:id="@+id/announceAnonymousPostCheckBox"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/announce_post_anonymous"/>-->

            <!--<CheckBox-->
            <!--android:id="@+id/expiryCheckBox"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/announce_expiry_date"/>-->

            <CheckBox
                    android:id="@+id/importantCheckBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/announce_important"/>


            <android.support.v7.widget.RecyclerView
                    android:id="@+id/announceAttachmentRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                <EditText
                        android:id="@+id/attachmentAddEditText"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/announce_add_file_hint"/>

                <ImageButton
                        android:id="@+id/attachmentAddButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:contentDescription="@string/announce_action_add_attachment"
                        android:src="@drawable/ic_plus"/>

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_medium"
                    android:src="@drawable/tick_icon"
                    android:tint="@color/colorPrimary"
                    android:id="@+id/announceBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/announce_action_announce"/>
        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>